NavDrawer fixing & optimization

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <array name="sample_titles">
-        <item>Sample #1</item>
-        <item>Sample #2</item>
-        <item>Sample #3</item>
-        <item>Sample #4</item>
-        <item>Sample #5</item>
+    <array name="drawer_item_titles">
+        <item>Feed</item>
+        <item>Downloaded</item>
+        <item>Get premium</item>
+        <item>Settings</item>
     </array>
 
 </resources>
