-CustomScrollView used in MainFeed instead of default one -Stub-AudioFragments get added into MainFeed CustomScrollView if user is about to reach end of list of Fragments

--- a/res/layout/activity_main_feed.xml
+++ b/res/layout/activity_main_feed.xml
@@ -25,7 +25,8 @@
         android:layout_height="match_parent">
 
         <!-- Activitys Main Content -->
-        <ScrollView
+        <bll.scg.de.audiomanager.util.CustomScrollView
+            android:id="@+id/cScrollView_contentFrame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -36,12 +37,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
-
-
             </LinearLayout>
 
-        </ScrollView>
+        </bll.scg.de.audiomanager.util.CustomScrollView>
 
         <!-- navigation drawer-->
         <ListView
