--- a/res/layout/fragment_audiofile.xml
+++ b/res/layout/fragment_audiofile.xml
@@ -27,6 +27,7 @@
         android:layout_height="60dp" />
 
     <TextView
+        android:id="@+id/textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitle"
@@ -61,9 +62,10 @@
         android:layout_marginStart="10dp"/>
 
     <TextView
+        android:id="@+id/textView_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="totalTime"
+        android:text="Audio length"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:layout_alignTop="@+id/textView_timeDivider"
